--- a/style.css
+++ b/style.css
@@ -9,23 +9,45 @@ body {
     font-family: 'Kanit';
 }
 
+.button-User {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #56021F; 
+    color: white;
+    text-align: center;
+    text-decoration: none; /* ลบการตกแต่งลิงก์ (ขีดเส้นใต้) */
+    border-radius: 5px; /* ขอบโค้ง */
+    font-size: 16px;
+}
+
+.button-User:hover {
+    background-color: #F37199; /* เปลี่ยนสีพื้นหลังเมื่อเอาเมาส์ไปอยู่บนปุ่ม */
+}
+
 .container {
     width: 100%;
     max-width: 640px;
     margin-left: auto;
     margin-right: auto;
-    background-color: azure;
+    background-color: #FBF5DD;
+    border: 3px solid #854836;
     padding: 20px;
     box-sizing: border-box;
+    border-radius: 5px;
 }
 
 .header {
     font-size: 36px;
     text-align: center;
     margin-bottom: 20px;
+    background-color: #F37199;
+    border: 2px solid #56021F;
+    color: #56021F;
+    border-radius: 5px;
 }
 
 .header-form {
+    color: #481E14;
     width: 100px;   
 }
 
@@ -34,11 +56,12 @@ body {
 }
 
 .form-input {
+    color: #481E14;
     margin-bottom: 3px;
 }
 
 input.form, textarea {
-    border: 1px solid black;
+    border: 1px solid #854836;
     width: 100%;
 }
 
@@ -46,12 +69,17 @@ input.form, textarea {
     text-align: center;
 }
 
-.bunton {
-    border: 0px solid black;
+.button {
     width: 50%;
     height: 40px;
-    background-color: lightcoral;
-    color: white;
+    background-color: #F37199;
+    color: #56021F;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.button:hover {
+    background-color: #8A1E3C; 
 }
 
 .message {
@@ -61,7 +89,7 @@ input.form, textarea {
     display: none;
 }
 
-.message.sussess {
+.message.success {
     background-color : lightgreen;
     display: block;
 }
