--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     text-decoration: none; /* ลบการตกแต่งลิงก์ (ขีดเส้นใต้) */
     border-radius: 5px; /* ขอบโค้ง */
     font-size: 16px;
+    font-weight: bold;
 }
 
 .button-User:hover {
@@ -73,9 +74,11 @@ input.form, textarea {
     width: 50%;
     height: 40px;
     background-color: #F37199;
-    color: #56021F;
+    color: white;
     border-radius: 5px;
     font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .button:hover {
