--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
 
 body {
     font-family: 'Kanit';
+    background-image: url('background.jpg'); /* เปลี่ยนเป็นที่อยู่ของรูปภาพ */
+    background-size: cover; /* ปรับให้รูปภาพเต็มจอ */
+    background-position: center; /* จัดตำแหน่งรูปให้อยู่ตรงกลาง */
+    background-repeat: no-repeat; /* ไม่ให้รูปซ้ำ */
+    height: 100vh; /* ความสูงเต็มจอ */
+    margin: 0; /* ไม่มีระยะขอบ */
 }
 
 .button-User {
@@ -16,12 +22,16 @@ body {
     color: white;
     text-align: center;
     text-decoration: none; /* ลบการตกแต่งลิงก์ (ขีดเส้นใต้) */
-    border-radius: 5px; /* ขอบโค้ง */
+    border-radius: 25px; /* ขอบโค้ง */
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    transition: background-color 0.3s ease-in-out; /* ทำให้สีเปลี่ยนช้า */
 }
 
 .button-User:hover {
+    transform: scale(1.1); /* ขยายขนาดปุ่มเมื่อเอาเมาส์ไปอยู่บนปุ่ม */
     background-color: #F37199; /* เปลี่ยนสีพื้นหลังเมื่อเอาเมาส์ไปอยู่บนปุ่ม */
 }
 
@@ -42,7 +52,7 @@ body {
     text-align: center;
     margin-bottom: 20px;
     background-color: #F37199;
-    border: 2px solid #56021F;
+    border: 3px solid #56021F;
     color: #56021F;
     border-radius: 5px;
 }
@@ -62,7 +72,7 @@ body {
 }
 
 input.form, textarea {
-    border: 1px solid #854836;
+    border: 3px solid #854836;
     width: 100%;
 }
 
@@ -75,10 +85,11 @@ input.form, textarea {
     height: 40px;
     background-color: #F37199;
     color: white;
-    border-radius: 5px;
+    border-radius: 20px;
     font-size: 14px;
     font-weight: bold;
     cursor: pointer;
+    border: none;
 }
 
 .button:hover {
